# event-driven-architecture-example

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose-postgres.yaml
backend/: .enc.env  README.md  pyproject.toml  requirements.txt
backend/backend/: __init__.py  main.py  models.py
backend/backend/alembic/: env.py
backend/backend/alembic/versions/: 284162ba6c5a_add_operation_name.py  399c1bf6ebeb_rename_to_transcript.py  5348111d5bca_remove_is_done.py  c73158f9ec9c_update_schema.py  da059e6a3c68_mark_transcript_as_optional.py  ddaaaca1bb37_remove_is_done_in_table.py  e4569bf81c29_init.py
backend/backend/model/: submit.py
backend/backend/transcribe/: __init__.py  get.py  request.py  status.py
backend/backend/utils/: db.py
frontend/: .enc.env  pyproject.toml
frontend/frontend/: app.py
worker/: .enc.env  pyproject.toml  requirements.txt
worker/worker/: main.py  models.py
worker/worker/model/: request.py
worker/worker/utils/: db.py
